Bug 292470 - Fail to add Tab
Summary: Fail to add Tab
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: regression
: 292682 294858 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-26 15:28 UTC by Vladimirs Kuzmins
Modified: 2012-05-31 20:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vladimirs Kuzmins 2012-01-26 15:28:02 UTC
Application: dolphin (2.0)
KDE Platform Version: 4.8.00 (4.8.0 "release 462"
Qt Version: 4.8.0
Operating System: Linux 3.1.0-1.2-desktop i686
Distribution: "openSUSE 12.1 (i586)"

-- Information about the crash:
- What I was doing when the application crashed:
Choose to open new Tab or press Ctrl+1

- Custom settings of the application:
I have split view option on by default.
Just upgraded from kde4.7 - may be something is wrong with setting migration

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb574e710 (LWP 4848))]

Thread 2 (Thread 0xb0bf8b70 (LWP 4849)):
#0  0xb5a80c96 in clock_gettime () from /lib/librt.so.1
#1  0xb6d3e625 in ?? () from /usr/lib/libQtCore.so.4
#2  0xb6e26ee6 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb6e2724a in ?? () from /usr/lib/libQtCore.so.4
#4  0xb6e25a43 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb6e25add in ?? () from /usr/lib/libQtCore.so.4
#6  0xb59c744c in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#7  0xb59c8207 in ?? () from /usr/lib/libglib-2.0.so.0
#8  0xb59c87fa in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#9  0xb6e265a7 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#10 0xb6df240d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#11 0xb6df26a9 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0xb6cdcd0c in QThread::exec() () from /usr/lib/libQtCore.so.4
#13 0xb6dcf97d in ?? () from /usr/lib/libQtCore.so.4
#14 0xb6ce01f0 in ?? () from /usr/lib/libQtCore.so.4
#15 0xb6c5ca7d in start_thread () from /lib/libpthread.so.0
#16 0xb5fee89e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb574e710 (LWP 4848)):
[KCrash Handler]
#6  0xb1d83497 in DolphinViewContainer::setActive (this=0x0, active=true) at /usr/src/debug/kde-baseapps-4.8.0/dolphin/src/dolphinviewcontainer.cpp:164
#7  0xb1d7c1dc in DolphinMainWindow::openNewTab (this=0x81fa750, url=...) at /usr/src/debug/kde-baseapps-4.8.0/dolphin/src/dolphinmainwindow.cpp:517
#8  0xb1d7d249 in DolphinMainWindow::openNewTab (this=0x81fa750) at /usr/src/debug/kde-baseapps-4.8.0/dolphin/src/dolphinmainwindow.cpp:471
#9  0xb1d8192c in qt_static_metacall (_a=0xbfa22ec8, _id=52, _o=0x81fa750, _c=<optimized out>) at /usr/src/debug/kde-baseapps-4.8.0/build/dolphin/src/dolphinmainwindow.moc:239
#10 DolphinMainWindow::qt_static_metacall (_o=0x81fa750, _c=QMetaObject::InvokeMetaMethod, _id=52, _a=0xbfa22ec8) at /usr/src/debug/kde-baseapps-4.8.0/build/dolphin/src/dolphinmainwindow.moc:180
#11 0xb6e0a0ff in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#12 0xb62ba07d in QAction::triggered(bool) () from /usr/lib/libQtGui.so.4
#13 0xb62ba31b in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQtGui.so.4
#14 0xb62ba4b0 in QAction::event(QEvent*) () from /usr/lib/libQtGui.so.4
#15 0xb7461d7f in KAction::event(QEvent*) () from /usr/lib/libkdeui.so.5
#16 0xb62c12f4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#17 0xb62c6703 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#18 0xb7566851 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#19 0xb6df389e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#20 0xb62f99c7 in ?? () from /usr/lib/libQtGui.so.4
#21 0xb62fafde in ?? () from /usr/lib/libQtGui.so.4
#22 0xb62c8948 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#23 0xb7566851 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#24 0xb6df389e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#25 0xb62bf3dd in ?? () from /usr/lib/libQtGui.so.4
#26 0xb6370ab0 in ?? () from /usr/lib/libQtGui.so.4
#27 0xb6370f4d in ?? () from /usr/lib/libQtGui.so.4
#28 0xb6349be5 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#29 0xb637550c in ?? () from /usr/lib/libQtGui.so.4
#30 0xb59c7e2f in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#31 0xb59c8560 in ?? () from /usr/lib/libglib-2.0.so.0
#32 0xb59c87fa in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#33 0xb6e26547 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#34 0xb637510a in ?? () from /usr/lib/libQtGui.so.4
#35 0xb6df240d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#36 0xb6df26a9 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#37 0xb6df78fa in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#38 0xb62bf164 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#39 0xb1d8b971 in kdemain (argc=5, argv=0x80a6c20) at /usr/src/debug/kde-baseapps-4.8.0/dolphin/src/main.cpp:91
#40 0x0804fc3f in _start ()

Reported using DrKonqi
Comment 1 Peter Penz 2012-01-26 15:42:32 UTC
Thanks for the report, I could reproduce the issue.

(internal note: happens only if "split view" is enabled)
Comment 2 Peter Penz 2012-01-27 21:02:11 UTC
Git commit 7f90043a28499fd67f6a5fbb2349f52d487d145f by Peter Penz.
Committed on 27/01/2012 at 21:30.
Pushed by ppenz into branch 'master'.

Don't crash when opening a tab with enabled split view
FIXED-IN: 4.8.1

M  +3    -3    dolphin/src/dolphinmainwindow.cpp

http://commits.kde.org/kde-baseapps/7f90043a28499fd67f6a5fbb2349f52d487d145f
Comment 3 Peter Penz 2012-01-27 21:03:05 UTC
Git commit 5d22b71437b8e978a051d8245b6140f09253639b by Peter Penz.
Committed on 27/01/2012 at 21:30.
Pushed by ppenz into branch 'KDE/4.8'.

Don't crash when opening a tab with enabled split view
FIXED-IN: 4.8.1

M  +3    -3    dolphin/src/dolphinmainwindow.cpp

http://commits.kde.org/kde-baseapps/5d22b71437b8e978a051d8245b6140f09253639b
Comment 4 Frank Reininghaus 2012-01-28 14:22:43 UTC
*** Bug 292682 has been marked as a duplicate of this bug. ***
Comment 5 Jekyll Wu 2012-05-31 20:09:55 UTC
*** Bug 294858 has been marked as a duplicate of this bug. ***