Don't crash when opening a tab with enabled split view

BUG: 292470
FIXED-IN: 4.8.1